--- a/static/index.html
+++ b/static/index.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Michael Bernstein</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Elaine Zhou</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Michael Bernstein is an assistant professor of Computer Science at Stanford University and director of the human-computer interaction group. He combines computation with crowds, designing systems that enable people to connect and coordinate online.</p>
+	<p>Elaine is a Junior at Stanford University studying Computer Science. I can ride my bike with no handlebars. </p>
 
 	<h4>Projects</h4>
 	<ol>
